[package]
name = "rust_bpe"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the BPE algorithm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
bincode = "1.3.3"
